<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout_id"
        style="@style/AppWidgetSection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/main_app_text"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alternative_link_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="14dp"
            android:text="@string/alternativeMeLink" />

        <TextView
            android:id="@+id/btctools_link_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="14dp"
            android:text="@string/btctoolsLink" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>