<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appWidgetBackgroundColor"
    android:padding="@dimen/widget_margin"
    android:theme="@style/ThemeOverlay.CryptoFearGreed.AppWidgetContainer">

    <LinearLayout
        android:id="@+id/top_section_id"
        style="@style/AppWidgetSection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appwidget_id_label"
            style="@style/AppWidgetLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appwidget_label"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/appwidget_id_indexValue"
            style="@style/AppWidgetIndexValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/appwidget_indexValue" />

        <TextView
            android:id="@+id/appwidget_id_indexMeaning"
            style="@style/AppWidgetLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/appwidget_indexMeaning"
            />

    </LinearLayout>
</RelativeLayout>